croaring-sys/CRoaring/bindgen_bundled_version.rs

/* automatically generated by rust-bindgen 0.71.1 */

pub const ROARING_VERSION: &[u8; 6] = b"4.2.3\0";
pub const ROARING_VERSION_MAJOR: _bindgen_ty_1 = 4;
pub const ROARING_VERSION_MINOR: _bindgen_ty_1 = 2;
pub const ROARING_VERSION_REVISION: _bindgen_ty_1 = 3;
pub type _bindgen_ty_1 = ::core::ffi::c_uint;
extern "C" {
    #[doc = " result might be undefined when input_num is zero"]
    pub fn roaring_trailing_zeroes(input_num: ::core::ffi::c_ulonglong) -> ::core::ffi::c_int;
}
extern "C" {
    #[doc = " result might be undefined when input_num is zero"]
    pub fn roaring_leading_zeroes(input_num: ::core::ffi::c_ulonglong) -> ::core::ffi::c_int;
}
#[doc = " Roaring arrays are array-based key-value pairs having containers as values\n and 16-bit integer keys. A roaring bitmap  might be implemented as such."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct roaring_array_s {
    pub size: i32,
    pub allocation_size: i32,
    pub containers: *mut *mut ::core::ffi::c_void,
    pub keys: *mut u16,
    pub typecodes: *mut u8,
    pub flags: u8,
}
#[doc = " Roaring arrays are array-based key-value pairs having containers as values\n and 16-bit integer keys. A roaring bitmap  might be implemented as such."]
pub type roaring_array_t = roaring_array_s;
pub type roaring_iterator = ::core::option::Option<
    unsafe extern "C" fn(value: u32, param: *mut ::core::ffi::c_void) -> bool,
>;
pub type roaring_iterator64 = ::core::option::Option<
    unsafe extern "C" fn(value: u64, param: *mut ::core::ffi::c_void) -> bool,
>;
#[doc = "  (For advanced users.)\n The roaring_statistics_t can be used to collect detailed statistics about\n the composition of a roaring bitmap."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct roaring_statistics_s {
    pub n_containers: u32,
    pub n_array_containers: u32,
    pub n_run_containers: u32,
    pub n_bitset_containers: u32,
    pub n_values_array_containers: u32,
    pub n_values_run_containers: u32,
    pub n_values_bitset_containers: u32,
    pub n_bytes_array_containers: u32,
    pub n_bytes_run_containers: u32,
    pub n_bytes_bitset_containers: u32,
    pub max_value: u32,
    pub min_value: u32,
    pub sum_value: u64,
    pub cardinality: u64,
}
#[doc = "  (For advanced users.)\n The roaring_statistics_t can be used to collect detailed statistics about\n the composition of a roaring bitmap."]
pub type roaring_statistics_t = roaring_statistics_s;
#[doc = "  (For advanced users.)\n The roaring64_statistics_t can be used to collect detailed statistics about\n the composition of a roaring64 bitmap."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct roaring64_statistics_s {
    pub n_containers: u64,
    pub n_array_containers: u64,
    pub n_run_containers: u64,
    pub n_bitset_containers: u64,
    pub n_values_array_containers: u64,
    pub n_values_run_containers: u64,
    pub n_values_bitset_containers: u64,
    pub n_bytes_array_containers: u64,
    pub n_bytes_run_containers: u64,
    pub n_bytes_bitset_containers: u64,
    pub max_value: u64,
    pub min_value: u64,
    pub cardinality: u64,
}
#[doc = "  (For advanced users.)\n The roaring64_statistics_t can be used to collect detailed statistics about\n the composition of a roaring64 bitmap."]
pub type roaring64_statistics_t = roaring64_statistics_s;
#[doc = " Roaring-internal type used to iterate within a roaring container."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct roaring_container_iterator_s {
    pub index: i32,
}
#[doc = " Roaring-internal type used to iterate within a roaring container."]
pub type roaring_container_iterator_t = roaring_container_iterator_s;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct bitset_s {
    pub array: *mut u64,
    pub arraysize: usize,
    pub capacity: usize,
}
pub type bitset_t = bitset_s;
extern "C" {
    pub fn bitset_create() -> *mut bitset_t;
}
extern "C" {
    pub fn bitset_create_with_capacity(size: usize) -> *mut bitset_t;
}
extern "C" {
    pub fn bitset_free(bitset: *mut bitset_t);
}
extern "C" {
    pub fn bitset_clear(bitset: *mut bitset_t);
}
extern "C" {
    pub fn bitset_fill(bitset: *mut bitset_t);
}
extern "C" {
    pub fn bitset_copy(bitset: *const bitset_t) -> *mut bitset_t;
}
extern "C" {
    pub fn bitset_resize(bitset: *mut bitset_t, newarraysize: usize, padwithzeroes: bool) -> bool;
}
extern "C" {
    pub fn bitset_size_in_bytes(bitset: *const bitset_t) -> usize;
}
extern "C" {
    pub fn bitset_size_in_bits(bitset: *const bitset_t) -> usize;
}
extern "C" {
    pub fn bitset_size_in_words(bitset: *const bitset_t) -> usize;
}
extern "C" {
    pub fn bitset_grow(bitset: *mut bitset_t, newarraysize: usize) -> bool;
}
extern "C" {
    pub fn bitset_trim(bitset: *mut bitset_t) -> bool;
}
extern "C" {
    pub fn bitset_shift_left(bitset: *mut bitset_t, s: usize);
}
extern "C" {
    pub fn bitset_shift_right(bitset: *mut bitset_t, s: usize);
}
extern "C" {
    pub fn bitset_set(bitset: *mut bitset_t, i: usize);
}
extern "C" {
    pub fn bitset_set_to_value(bitset: *mut bitset_t, i: usize, flag: bool);
}
extern "C" {
    pub fn bitset_get(bitset: *const bitset_t, i: usize) -> bool;
}
extern "C" {
    pub fn bitset_count(bitset: *const bitset_t) -> usize;
}
extern "C" {
    pub fn bitset_empty(bitset: *const bitset_t) -> bool;
}
extern "C" {
    pub fn bitset_minimum(bitset: *const bitset_t) -> usize;
}
extern "C" {
    pub fn bitset_maximum(bitset: *const bitset_t) -> usize;
}
extern "C" {
    pub fn bitset_inplace_union(b1: *mut bitset_t, b2: *const bitset_t) -> bool;
}
extern "C" {
    pub fn bitset_union_count(b1: *const bitset_t, b2: *const bitset_t) -> usize;
}
extern "C" {
    pub fn bitset_inplace_intersection(b1: *mut bitset_t, b2: *const bitset_t);
}
extern "C" {
    pub fn bitset_intersection_count(b1: *const bitset_t, b2: *const bitset_t) -> usize;
}
extern "C" {
    pub fn bitsets_disjoint(b1: *const bitset_t, b2: *const bitset_t) -> bool;
}
extern "C" {
    pub fn bitsets_intersect(b1: *const bitset_t, b2: *const bitset_t) -> bool;
}
extern "C" {
    pub fn bitset_contains_all(b1: *const bitset_t, b2: *const bitset_t) -> bool;
}
extern "C" {
    pub fn bitset_inplace_difference(b1: *mut bitset_t, b2: *const bitset_t);
}
extern "C" {
    pub fn bitset_difference_count(b1: *const bitset_t, b2: *const bitset_t) -> usize;
}
extern "C" {
    pub fn bitset_inplace_symmetric_difference(b1: *mut bitset_t, b2: *const bitset_t) -> bool;
}
extern "C" {
    pub fn bitset_symmetric_difference_count(b1: *const bitset_t, b2: *const bitset_t) -> usize;
}
extern "C" {
    pub fn bitset_next_set_bit(bitset: *const bitset_t, i: *mut usize) -> bool;
}
extern "C" {
    pub fn bitset_next_set_bits(
        bitset: *const bitset_t,
        buffer: *mut usize,
        capacity: usize,
        startfrom: *mut usize,
    ) -> usize;
}
pub type bitset_iterator = ::core::option::Option<
    unsafe extern "C" fn(value: usize, param: *mut ::core::ffi::c_void) -> bool,
>;
extern "C" {
    pub fn bitset_for_each(
        b: *const bitset_t,
        iterator: bitset_iterator,
        ptr: *mut ::core::ffi::c_void,
    ) -> bool;
}
extern "C" {
    pub fn bitset_print(b: *const bitset_t);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct roaring_bitmap_s {
    pub high_low_container: roaring_array_t,
}
pub type roaring_bitmap_t = roaring_bitmap_s;
extern "C" {
    #[doc = " Dynamically allocates a new bitmap (initially empty).\n Returns NULL if the allocation fails.\n Capacity is a performance hint for how many \"containers\" the data will need.\n Client is responsible for calling `roaring_bitmap_free()`."]
    pub fn roaring_bitmap_create_with_capacity(cap: u32) -> *mut roaring_bitmap_t;
}
extern "C" {
    #[doc = " Dynamically allocates a new bitmap (initially empty).\n Returns NULL if the allocation fails.\n Client is responsible for calling `roaring_bitmap_free()`."]
    pub fn roaring_bitmap_create() -> *mut roaring_bitmap_t;
}
extern "C" {
    #[doc = " Initialize a roaring bitmap structure in memory controlled by client.\n Capacity is a performance hint for how many \"containers\" the data will need.\n Can return false if auxiliary allocations fail when capacity greater than 0."]
    pub fn roaring_bitmap_init_with_capacity(r: *mut roaring_bitmap_t, cap: u32) -> bool;
}
extern "C" {
    #[doc = " Initialize a roaring bitmap structure in memory controlled by client.\n The bitmap will be in a \"clear\" state, with no auxiliary allocations.\n Since this performs no allocations, the function will not fail."]
    pub fn roaring_bitmap_init_cleared(r: *mut roaring_bitmap_t);
}
extern "C" {
    #[doc = " Add all the values between min (included) and max (excluded) that are at a\n distance k*step from min."]
    pub fn roaring_bitmap_from_range(min: u64, max: u64, step: u32) -> *mut roaring_bitmap_t;
}
extern "C" {
    #[doc = " Creates a new bitmap from a pointer of uint32_t integers"]
    pub fn roaring_bitmap_of_ptr(n_args: usize, vals: *const u32) -> *mut roaring_bitmap_t;
}
extern "C" {
    pub fn roaring_bitmap_get_copy_on_write(r: *const roaring_bitmap_t) -> bool;
}
extern "C" {
    pub fn roaring_bitmap_set_copy_on_write(r: *mut roaring_bitmap_t, cow: bool);
}
extern "C" {
    pub fn roaring_bitmap_add_offset(
        bm: *const roaring_bitmap_t,
        offset: i64,
    ) -> *mut roaring_bitmap_t;
}
extern "C" {
    #[doc = " Describe the inner structure of the bitmap."]
    pub fn roaring_bitmap_printf_describe(r: *const roaring_bitmap_t);
}
extern "C" {
    #[doc = " Creates a new bitmap from a list of uint32_t integers\n\n This function is deprecated, use `roaring_bitmap_from` instead, which\n doesn't require the number of elements to be passed in.\n\n @see roaring_bitmap_from"]
    pub fn roaring_bitmap_of(n: usize, ...) -> *mut roaring_bitmap_t;
}
extern "C" {
    #[doc = " Copies a bitmap (this does memory allocation).\n The caller is responsible for memory management."]
    pub fn roaring_bitmap_copy(r: *const roaring_bitmap_t) -> *mut roaring_bitmap_t;
}
extern "C" {
    #[doc = " Copies a bitmap from src to dest. It is assumed that the pointer dest\n is to an already allocated bitmap. The content of the dest bitmap is\n freed/deleted.\n\n It might be preferable and simpler to call roaring_bitmap_copy except\n that roaring_bitmap_overwrite can save on memory allocations.\n\n Returns true if successful, or false if there was an error. On failure,\n the dest bitmap is left in a valid, empty state (even if it was not empty\n before)."]
    pub fn roaring_bitmap_overwrite(
        dest: *mut roaring_bitmap_t,
        src: *const roaring_bitmap_t,
    ) -> bool;
}
extern "C" {
    #[doc = " Print the content of the bitmap."]
    pub fn roaring_bitmap_printf(r: *const roaring_bitmap_t);
}
extern "C" {
    #[doc = " Computes the intersection between two bitmaps and returns new bitmap. The\n caller is responsible for memory management.\n\n Performance hint: if you are computing the intersection between several\n bitmaps, two-by-two, it is best to start with the smallest bitmap.\n You may also rely on roaring_bitmap_and_inplace to avoid creating\n many temporary bitmaps."]
    pub fn roaring_bitmap_and(
        r1: *const roaring_bitmap_t,
        r2: *const roaring_bitmap_t,
    ) -> *mut roaring_bitmap_t;
}
extern "C" {
    #[doc = " Computes the size of the intersection between two bitmaps."]
    pub fn roaring_bitmap_and_cardinality(
        r1: *const roaring_bitmap_t,
        r2: *const roaring_bitmap_t,
    ) -> u64;
}
extern "C" {
    #[doc = " Check whether two bitmaps intersect."]
    pub fn roaring_bitmap_intersect(
        r1: *const roaring_bitmap_t,
        r2: *const roaring_bitmap_t,
    ) -> bool;
}
extern "C" {
    #[doc = " Check whether a bitmap and an open range intersect."]
    pub fn roaring_bitmap_intersect_with_range(bm: *const roaring_bitmap_t, x: u64, y: u64)
        -> bool;
}
